# Manager

./: .gitignore  CMakeLists.txt  manager
inc/: main.h
src/: argchecker.c  main.c
